gl: Disable SGI_video_sync by default.

Disables the SGI_video_sync extension and assumes a
vsync interval of 59.9Hz on Linux.

Also adds an --enable-sgi-video-sync command line flag to
re-enable the extension.

Use of the extension on a thread other than the main GPU
thread is encountering issues with Chrome's sandbox for
certain combinations of Linux window managers and NVIDIA
drivers.

Before this patch, we were assuming a frequency of 60Hz
on Linux and re-aligning the phase every 5 seconds.
Since we can no longer align the phase, we assume a
frequency of 59.9 Hz. On a 60Hz monitor, this avoids
driver backpressure on the GPU thread at the cost of
skipping a frame every 10 seconds.

BUG=636644

Review-Url: https://codereview.chromium.org/2277883003
Cr-Commit-Position: refs/heads/master@{#414342}

Former-commit-id: 22774dfbaceb5f616183b3d6135264b458c9ed0a