ui/gl/gl_switches.cc
@@ -82,6 +82,10 @@ const char kUseGpuInTests[] = "use-gpu-in-tests";
 // Enable OpenGL ES 3 APIs without proper service side validation.
 const char kEnableUnsafeES3APIs[] = "enable-unsafe-es3-apis";
 
+// Enable use of the SGI_video_sync extension, which can have
+// driver/sandbox/window manager compatibility issues.
+const char kEnableSgiVideoSync[] = "enable-sgi-video-sync";
+
 // Disables GL drawing operations which produce pixel output. With this
 // the GL output will not be correct but tests will run faster.
 const char kDisableGLDrawingForTests[] = "disable-gl-drawing-for-tests";
@@ -102,6 +106,7 @@ const char* kGLSwitchesCopiedFromGpuProcessHost[] = {
     kEnableGPUServiceLogging,
     kEnableGPUServiceTracing,
     kEnableUnsafeES3APIs,
+    kEnableSgiVideoSync,
     kGpuNoContextLost,
     kDisableGLDrawingForTests,
     kOverrideUseGLWithOSMesaForTests,
